--- a/.settings/com.appcelerator.titanium.android.core.prefs
+++ b/.settings/com.appcelerator.titanium.android.core.prefs
@@ -2,9 +2,9 @@ android/ATTR_MINIFY=true
 android/ATTR_PROJECT_NAME=ZiriZiri
 android/abi=x86
 android/distribute_path=/Users/adrianomassi/Documents/Dropbox/ZiriZiri Resources/Distibution Android
-android/keystore_alias=
-android/keystore_password=
-android/keystore_path=
+android/keystore_alias=ziriziri
+android/keystore_password=ziriziri
+android/keystore_path=/Users/adrianomassi/Documents/Dropbox/ZiriZiri Resources/Distibution Android/KeyStore/ziriziri
 android/recent_output=/Users/adrianomassi/Documents/Dropbox/ZiriZiri Resources/Distibution Android
 android/sdk_version=2.3.3
 eclipse.preferences.version=1
