--- a/.settings/com.appcelerator.titanium.android.core.prefs
+++ b/.settings/com.appcelerator.titanium.android.core.prefs
@@ -1,10 +1,10 @@
 android/ATTR_PROJECT_NAME=ZiriZiri
-android/abi=armeabi
+android/abi=x86
 android/distribute_path=/Users/adrianomassi/Documents/Dropbox/ZiriZiri Resources/Distibution Android
 android/key_password=
 android/keystore_alias=ziriziri
 android/keystore_password=ziriziri
-android/keystore_path=/Users/adrianomassi/Documents/Dropbox/ZiriZiri Resources/Distibution Android/KeyStore/ziriziri
+android/keystore_path=/Users/adrianomassi/Documents/Dropbox/ZiriZiri Resources/Keystore New/zirizirimobile
 android/recent_output=/Users/adrianomassi/Documents/Dropbox/ZiriZiri Resources/Distibution Android
 android/sdk_version=2.3.3
 eclipse.preferences.version=1
