lazy loading new

--- a/app/config.json
+++ b/app/config.json
@@ -9,6 +9,7 @@
 	"os:mobileweb": {},
 	"dependencies": {
 		"starrating": "1.0",
-		"nl.fokkezb.loading":"1.6"
+		"nl.fokkezb.loading":"1.6",
+		"nl.fokkezb.infiniteScroll":"1.3.2"
 	}
 }
