documenti e finanza. Inserimento e visualizzazione

--- a/.settings/com.appcelerator.titanium.android.core.prefs
+++ b/.settings/com.appcelerator.titanium.android.core.prefs
@@ -1,11 +1,21 @@
 android/ATTR_MINIFY=true
+android/ATTR_MINIFY.type=Boolean
 android/ATTR_PROJECT_NAME=ZiriZiri
-android/abi=armeabi
+android/ATTR_PROJECT_NAME.type=String
+android/abi=x86
+android/abi.type=String
 android/distribute_path=/Users/adrianomassi/Documents/Dropbox/ZiriZiri Resources/Distibution Android
+android/distribute_path.type=String
 android/key_password=
+android/key_password.type=String
 android/keystore_alias=ziriziri
+android/keystore_alias.type=String
 android/keystore_password=ziriziri
-android/keystore_path=/Users/adrianomassi/Documents/SugarSync/Dropbox/ZiriZiri Resources/Keystore New/zirizirimobile
+android/keystore_password.type=String
+android/keystore_path=/Users/adrianomassi/Dropbox/ZiriZiri Resources/Keystore New/zirizirimobile
+android/keystore_path.type=String
 android/recent_output=/Users/adrianomassi/Documents/Dropbox/ZiriZiri Resources/Distibution Android
+android/recent_output.type=String
 android/sdk_version=2.3.3
+android/sdk_version.type=String
 eclipse.preferences.version=1
